--- a/interface/src/styles/variables.css
+++ b/interface/src/styles/variables.css
@@ -9,6 +9,8 @@
 
   --border-radius: 0.8em;
 
+  --box-shadow: 0 3px 5px 0 rgba(0,0,0,0.10);
+
   --z-index-bottom: -1;
   --z-index-above: 1;
   --z-index-buoyant: 2;
