--- a/interface/src/styles/variables.css
+++ b/interface/src/styles/variables.css
@@ -1,5 +1,7 @@
 :root {
-  --font-family-serif: Garamond, serif;
+  --font-family-serif: Requiem, Garamond, serif;
+  --font-family-serif-display: Requiem-Display, Garamond, serif;
+  --font-family-serif-fine: Requiem-Fine, Garamond, serif;
   --font-family-sans-serif: Roboto, sans-serif;
 
   --blue: #3BBDB6;
