tables section UI update

--- a/interface/src/styles/variables.css
+++ b/interface/src/styles/variables.css
@@ -3,6 +3,7 @@
   --font-family-sans-serif: Roboto, sans-serif;
 
   --blue: #3BBDB6;
+  --light-blue: #6AC2BD;
   --lead: #212121;
   --light-gray: #F5F5F5;
   --gray: #999999;
