--- a/interface/src/styles/typography.css
+++ b/interface/src/styles/typography.css
@@ -1,4 +1,4 @@
 @font-face {
   font-family: 'Orpheus';
-  src: url('/fonts/Orpheus.ttf');
+  src: url('../fonts/Orpheus.ttf') format('truetype');
 }
